@@ -66,4 +66,7 @@ extern struct symtab_and_line set_current_source_symtab_and_line (const struct s
 
 /* Reset any information stored about a default file and line to print. */
 extern void clear_current_source_symtab_and_line (void);
+
+/* Add a source path substitution rule.  */
+extern void add_substitute_path_rule (char *, char *);
 #endif
